# pep4rl

./: .gitignore  README.md  Research Diary_Predator-Prey-Learning.md  requirements.txt
learning/: config.py  config_sac.py  config_uniform_graph_sac.py
learning/algorithm/: attention_networks.py
learning/algorithm/ppo/: ppo_agent.py  ppo_networks.py  ppo_uav_agent.py
learning/envs/: dprm_planner_wrapper.py  drm_navigation_env.py  e2e_navigation_env.py  far_planner_wrapper.py  init_robot_target_generation.py  navigation_env.py  nonlearning_planner_wrapper.py  prm_graph_env.py  pursuit_evasion_env.py  roadmap_service.py  test_roadmap_data_process.py  test_roadmap_service.py  test_roadmap_subscribe.py  training_nav_goal_generation.py  ttttttttttttttttttttttt.py  uniform_graph_nav_env.py
learning/envs/random_positions/: eval_positions.p
learning/envs/test_scripts/: test_roadmap_data_process.py
learning/ir_sim_learning/ir_sim.egg-info/: PKG-INFO  SOURCES.txt
learning/scripts/eval/: eval_dprm_planner.py  eval_far_planner.py  eval_nonlearning_planner.py  (+1 more)
ros/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
ros/src/uav_platform/falco_planner/: CMakeLists.txt  package.xml
ros/src/uav_platform/falco_planner/launch/: local_planner_indoor.launch  local_planner_outdoor.launch  run_falco_planner.launch
ros/src/uav_platform/falco_planner/rviz/: vehicle_simulator_gazebo.rviz
ros/src/uav_platform/falco_planner/src/: localPlanner.cpp  pathFollower.cpp  vehicleSimulator.cpp
ros/src/uav_platform/falco_planner/srv/: SetRobotPose.srv
(+367 files in other folders)
